--- a/ToolSC/Views/Home/Index.cshtml
+++ b/ToolSC/Views/Home/Index.cshtml
@@ -3,35 +3,32 @@
 }
 
 <div class="">
-    <div class="container">
-        <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-            <textarea class="form-control" id="input" rows="3"></textarea>
-        </div>
-        <button type="button" class="btn btn-primary" onclick="submit()">Submit</button>
 
-        <div class="row">
-            <div class="col-md-6">
-                <div id="table-column">
-                    <div class="row">
-                        <div class="col-md-2" id="column-no"></div>
-                        <div class="col-md-4" id="column-name"></div>
-                        <div class="col-md-4" id="column-type"></div>
-                        <div class="col-md-2" id="column-length"></div>
-                    </div>
+   @*  <input type="text" value="Text to be copied" id="hiddenInput" style="position: absolute; left: -9999px; top: -9999px;">
+
+    <button id="copyButton">Copy Text</button> *@
+
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Table design</label>
+        <textarea class="form-control" id="input" rows="3"></textarea>
+    </div>
+    <button type="button" class="btn btn-primary" onclick="getColumnDetail()">Get detail</button>
+    <button type="button" class="btn btn-primary" onclick="genTableData()">Gen data</button>
+    <button type="button" class="btn btn-primary" onclick="genTableDataFullLength()">Gen data full-length</button>
+
+    <div class="row">
+        <div class="col-md-8 text-bg-secondary">
+            <div id="table-column">
+                <div class="row">
+                    <div class="col-md-2" id="column-no"></div>
+                    <div class="col-md-4" id="column-name"></div>
+                    <div class="col-md-4" id="column-type"></div>
+                    <div class="col-md-2" id="column-length"></div>
                 </div>
-               @*  <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Type</th>
-                            <th scope="col">Length</th>
-                        </tr>
-                    </thead>
-                    <tbody id="table-body">
-                    </tbody>
-                </table> *@
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div id="table-data" class="table-data">
             </div>
         </div>
     </div>
