--- a/ToolSC/Views/Shared/_Layout.cshtml
+++ b/ToolSC/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="m-3">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
