--- a/ToolSC/Views/Home/Index.cshtml
+++ b/ToolSC/Views/Home/Index.cshtml
@@ -10,15 +10,15 @@
 
     <div class="row">
         <div class="col-md-1">
-            <div style="position: fixed">
+            @*<div style="position: fixed">
                 <div class="mb-4"><img src="img/noel-tree.gif" title="noel-img" style="max-height: 140px; max-width: 140px;" /></div>
                 <div class="mb-4"><img src="img/tuan-loc.gif" title="noel-img" style="max-height: 140px; max-width: 140px;" /></div>
                 <div class="mb-4"><img src="img/tuan-loc-1.gif" title="noel-img" style="max-height: 140px; max-width: 140px;" /></div>
                 <div class="mb-4"><img src="img/tuan-loc-3.gif" title="noel-img" style="max-height: 140px; max-width: 140px;" /></div>
                 <div class="mb-4"><img src="img/meo.gif" title="noel-img" style="max-height: 140px; max-width: 140px;" /></div>
-            </div>
+            </div>*@
         </div>
-        <div class="col-md-11">
+        <div class="col-md-10">
             <div class="row">
                 <div class="col-md-3">
                     <div class="mb-1">
@@ -88,6 +88,7 @@
                 </div>
             </div>          
         </div>
+        <div class="col-md-1"></div>
     </div>
 </div>
 
